--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   </table>
 
   <hr>
-  <h3><a href="cv/hobbies.html">My hobbies</a></h3>
+  <h3><a href="Hobbies.html">My hobbies</a></h3>
 
-  <h4><a href="cv/contactme.html">Contact Me</a></h4>
+  <h4><a href="Contactme.html">Contact Me</a></h4>
 </body>
 
 </html>
